// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`State mutation formats color 1`] = `
Object {
  "bri": 254,
  "hue": 54613,
  "on": true,
  "sat": 254,
}
`;

exports[`State mutation handles the hex code correctly 1`] = `
Object {
  "bri": 254,
  "hue": 0,
  "sat": 0,
}
`;

exports[`State mutation works with hsl color functions 1`] = `
Object {
  "bri": 77,
  "hue": 60074,
  "sat": 172,
}
`;

exports[`State mutation works with rgb() color functions 1`] = `
Object {
  "bri": 254,
  "hue": 5201,
  "sat": 105,
}
`;
